Task 1 improvement